# pharia-inference-sdk

./: .env.example  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: artifactory.yml  release-please.yml  test.yml
connectors/: __init__.py
core/: chunk.py  detect_language.py  echo.py  instruct.py  model.py  task.py  text_highlight.py
core/tracer/: __init__.py  composite_tracer.py  file_tracer.py  in_memory_tracer.py  open_telemetry_tracer.py  persistent_tracer.py
docs/source/: 01-quickstart.md  02-core_concepts.md  conf.py  index.md  references.rst
documentation/: attention_manipulation_with_text_controls.ipynb  how_to_implement_a_task.ipynb  performance_tips.ipynb
tests/: conftest.py  test_chunk.py  test_detect_language.py  test_echo.py  test_model.py  test_prompt_template.py  test_task.py  test_text_highlight.py
tests/connectors/: test_limited_concurrency_client.py
tests/tracer/: conftest.py  test_composite_tracer.py  test_file_tracer.py  test_in_memory_tracer.py  test_open_telemetry_tracer.py  test_tracer.py
